--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 title: Rokem Research
-email: your-email@example.com
+email: arokem@uw.edu
 description: >- # this means to ignore newlines until "baseurl:"
   arokem's r&d
 baseurl: "/" # the subpath of your site, e.g. /blog
